1.1.2 / 2013-03-15

* Enhancements

  * 2012 Fuel Economy Guide
  * RECS 2009 microdata
  * New ZCTA urls from census.gov

* Bug fixes

  * Fix esoteric regression with loading RECS 2009

1.1.0 / 2012-10-18

* Breaking changes

  * Get rid of geokit and geokit-rails; use geocoder instead (only affects ZipCode and Airport)

0.11.18 / 2012-04-20

* Bug fixes

  * Replace col :foo, :index => true with col :foo; add_index :foo to match new active_record_inline_schema requirement

0.11.17 / 2012-04-17

* Breaking changes

  * No longer fix peoples find_in_batches for them (see below)
  * Earth.lib_dir -> Earth::LIB_DIR

* Enhancements

  * Let app owners fix their own ActiveRecord's find_in_batches, since we don't use it - see http://www.seejohncode.com/2011/09/16/uuids-and-find-in-batches/
  * Use data_miner 2.x, which is supposedly better

* Bug fixes

  * Fix memoization of Earth.resources