@@ -2,17 +2,6 @@ require 'spec_helper'
 require "#{Earth::FACTORY_DIR}/zip_code"
 
 describe ZipCode do
-  # from geocoder
-  describe '.near(point, radius)' do
-    it 'returns all zips within radius of the point' do
-      zip1 = FactoryGirl.create :zip_code, :zip1
-      zip2 = FactoryGirl.create :zip_code, :zip2
-      zip3 = FactoryGirl.create :zip_code, :zip3
-      
-      ZipCode.near(zip1, 15).should == [zip1, zip2]
-    end
-  end
-  
   describe '.known_subregion' do
     it 'returns all zips with an egrid subregion abbreviation' do
       zip1 = FactoryGirl.create :zip_code, :zip1
